# rs-dpkg

./: Cargo.toml  run.sh
scripts/: cache.json  diff.py  get_packages.py  install_status.txt  remove_status.txt
scripts/cache/: alter-sequence-alignment_1.3.4-2_all.deb  amavisd-milter-dbg_1.5.0-5_amd64.deb  apertium-all-dev_3.5.2-1_all.deb  archmage_1%3a0.3.1-4_all.deb  brz-doc_3.0.0~bzr7290-2_all.deb  cpl-plugin-hawki-doc_2.4.3+dfsg-1_all.deb  createrepo_0.10.3-1_all.deb  cvc4_1.6-2+b1_amd64.deb  education-highschool_2.10.47_amd64.deb  espeak-ng-espeak_1.49.2+dfsg-8_all.deb  firewall-applet_0.6.3-5_all.deb  fullquottel_0.1.3-1+b2_amd64.deb  fusiondirectory-plugin-quota_1.2.3-4+deb10u1_all.deb  gammaray-plugin-bluetooth_2.9.0-2.1+b3_amd64.deb  gauche-gdbm_0.9.6-10_amd64.deb  gcc-8-plugin-dev-aarch64-linux-gnu_8.3.0-2cross1_amd64.deb  gdc-i686-linux-gnu_4%3a8.3.0-1_amd64.deb  gir1.2-ebookcontacts-1.2_3.30.5-1_amd64.deb  gis-devel_0.0.16_all.deb  golang-github-leodido-ragel-machinery-dev_0.0~git20181214.299bdde-1_all.deb  golang-github-opencontainers-runc-dev_1.0.0~rc6+dfsg1-3_all.deb  gss-doc_1.0.3-3_all.deb  icedtea-netx_1.7.2-2_all.deb  jfractionlab_0.92-1_all.deb  jigit_1.21-1_amd64.deb  kinput2-canna-wnn_3.1-13+b1_amd64.deb  lcmaps-plugins-verify-proxy_1.5.10-2_amd64.deb  lib64objc-8-dev-i386-cross_8.3.0-2cross1_all.deb  lib64objc-8-dev-x32-cross_8.3.0-2cross2_all.deb  libatomic1-sh4-cross_8.3.0-2cross2_all.deb  libemf-dev_1.0.9+git.10.3231442-2_amd64.deb  (+62 more)
src/: control.rs  error.rs  main.rs  rfc822.rs  status.rs  types.rs  util.rs  warning.rs
