[package]
name = "rs-dpkg"
version = "0.1.0"
authors = ["Matthew Henderson <mattw2018@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ar = "*"
flate2 = "*"
tar = "*"
rust-lzma = "*"
md5 = "*"
termion = "*"